// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Then should show the component with imagen personalized 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage Then should show the component with the imagen of the product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
